css/custom.css
/* Move down content because we have a fixed navbar that is 50px tall */
body {
  padding-top: 50px;
  /*padding-bottom: 20px;*/
  font-size: 16px;
  /*font-family: 'EB Garamond', serif;*/
  /*font-family: 'Gentium Book Basic', serif;*/
  /*font-family: 'Merriweather', serif;*/
  font-family: 'PT Serif', serif;
  background-color: #E6EBE0;
}

p {
  text-align: justify;
  text-justify: inter-word;
}

section {
  padding-top: 50px;
  padding-bottom: 20px;
  margin-top: -50px;
  -webkit-background-clip: content-box;
  background-clip: content-box;
}

.navbar-inverse .nav li a {
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 12px;
    color: #fff;
}

.navbar-inverse .nav li a:hover {
    outline: 0;
    color: #5CA4A9;
}

.navbar-inverse .nav li a:focus {
    outline: 0;
}

.navbar-inverse .navbar-nav>.active>a {
    border-radius: 0;
    color: #fff;
    background-color: #fed136;
}

.navbar-inverse .navbar-nav>.active>a:hover,
.navbar-inverse .navbar-nav>.active>a:focus {
    color: #fff;
    background-color: #fec503;
}

.navbar-inverse {
  background-color: #46494C;
}

.jumbotron {
  text-align: center;
  background-color: #bcd5d1;
}

#registerJumbotron {
  text-align: left;
  /*background-color: #D4A190;*/
  background-color: #e3e0cf;
  padding-top: 0;
  padding-bottom: 20px;
}

.jumbotron p{
  font-size:16px;
  /*font-weight:200*/
}

/*
@media screen and (min-width: 500px) and (max-width: 767px) {
	
	
}

@media screen and (max-width: 499px) {
  
}*/

#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: 0 auto -360px;
  padding: 0 0 360px;
}

.footer {
  /*position: absolute;*/
  /*bottom: 0;*/
  /*width: 100%;*/
  /* Set the fixed height of the footer here */
  height: 360px;
  background-color: #46494C;
  color: white;
}

html {
  position: relative;
  min-height: 100%;
}

body {
  /* Margin bottom by footer height */
  /*margin-bottom: 60px;*/
}

.back-to-top {
  position: fixed;
	opacity: 0;
	visibility: hidden;
  z-index: 99999999;
  right: 30px;
	bottom: 30px;
  -webkit-transition: all 0.5s ease-in-out;
	-moz-transition: all 0.5s ease-in-out;
	-ms-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
	transition: all 0.5s ease-in-out;
}

.back-to-top.show {
  visibility:visible;
  cursor:pointer;
	opacity: 1.0;
}

#my-soon-counter {background-color:#db4b3e;background-color:rgba(219,75,62,0);}
#my-soon-counter .soon-reflection {background-color:#db4b3e;background-image:linear-gradient(#db4b3e 25%,rgba(219,75,62,0));}
#my-soon-counter {background-position:top;}
#my-soon-counter {color:#030303;color:rgba(3,3,3,0.25);}
#my-soon-counter {font-family:"Oswald",sans-serif;font-weight:normal;font-style:normal;font-size: 36px;}

#venue-map {
  margin: 0;
  padding: 0;
  height: 600px;
}

#top-shadow {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 50px;
    z-index: 999;
    -webkit-box-shadow: 0 8px 8px rgba(0, 0, 0, 0.5);
    -moz-box-shadow: 0 8px 8px rgba(0, 0, 0, 0.5);
    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.5);
    display: none;
}

